--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <div class="about_us mt-5" id="about_us">
         <div class="container d-flex justify-content-center gap-5 mt-5" style="margin-bottom: 5rem;">
-            <div class="foto align-self-center">
+            <div class="foto align-self-center" style="width:50%;">
                 <img src="assets/kedai.jpg"  class="rounded img-fluid" alt="">
             </div>
             <div class="teks align-self-center" style="width: 50%;" >
