--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     
 
     <div class="about_us mt-5" id="about_us">
-        <div class="container d-flex justify-content-center gap-3 mt-5" style="margin-bottom: 5rem;">
+        <div class="container d-flex flex-column-reverse flex-lg-row justify-content-center gap-3 mt-5" style="margin-bottom: 5rem;">
             <div class="foto align-self-center" style="width:50%;">
                 <img src="assets/kedai.jpg"  class="rounded img-fluid" alt="">
             </div>
